k8slearn/4.Kubernetes 配置管理/4.5.OPA/Manifest/kube-mgmt/webhook-configuration.yaml
kind: ValidatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1
metadata:
  name: opa-validating-webhook
webhooks:
  - name: validating-webhook.openpolicyagent.org
    admissionReviewVersions: ["v1", "v1beta1"]
    namespaceSelector:
      matchExpressions:
      - key: openpolicyagent.org/webhook
        operator: NotIn
        values:
        - ignore
    failurePolicy: Ignore
    rules:
      - apiGroups:
        - '*'
        apiVersions:
        - '*'
        operations:
        - '*'
        resources:
        - '*'
    sideEffects: None
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFVENDQWZtZ0F3SUJBZ0lVRk1rOThkSm9wOFFCeW4rYWkxcTRLcENXcURRd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0Z6RVZNQk1HQTFVRUF3d01ZV1J0YVhOemFXOXVYMk5oTUNBWERUSTFNVEF5TnpFM01EQTFORm9ZRHpJeQpPVGt3T0RFeU1UY3dNRFUwV2pBWE1SVXdFd1lEVlFRRERBeGhaRzFwYzNOcGIyNWZZMkV3Z2dFaU1BMEdDU3FHClNJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUM2WG1WMENvcGxmNmNMbGFma1liNVlYQTdwOXpIUUpjL0sKUDEzY3RtREF3ajA4aEIrMTdZYjUwaHJ0bGFaUTd1UGFiaXVvUWVIM01oUDhianVyeFNiT2JQZk43bm4xQmhWVAoxREEwKzRIbTlR [...]
      service:
        namespace: opa
        name: opa
